# CQ_tools

./: .gitignore  README.md  main.py  pyproject.toml
CQAligent/: align.py
CQAnalysis/: CQ_runner.py  coverage_calculate.py  get_paths.py  standardization.py  windows_make.py
CQPlot/: CQ_plot.py  F_M_CQ.filter.tsv  chromosome_length.tsv
